openshift_exports/cluster_export/bbitai-dev-2026-03-20T15_31_03Z/bbitai-dev/NetworkPolicy_networking.k8s.io_v1_bbitai-dev_allow-from-redhat-ods-app-to-mariadb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    toolchain.dev.openshift.com/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"labels":{"toolchain.dev.openshift.com/provider":"codeready-toolchain","toolchain.dev.openshift.com/space":"bbitai"},"name":"allow-from-redhat-ods-app-to-mariadb","namespace":"bbitai-dev"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"redhat-ods-applications"}},"podSelector":{"matchLabels":{"app.kubernetes.io/name": [...]
  labels:
    toolchain.dev.openshift.com/provider: codeready-toolchain
    toolchain.dev.openshift.com/space: bbitai
  name: allow-from-redhat-ods-app-to-mariadb
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: redhat-ods-applications
      podSelector:
        matchLabels:
          app.kubernetes.io/name: data-science-pipelines-operator
    ports:
    - port: 3306
      protocol: TCP
  podSelector:
    matchLabels:
      app: mariadb-dspa
  policyTypes:
  - Ingress
